fix: cloud-1200 page get started alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7997,8 +7997,4 @@ li {
   padding-top: 5rem;
 }
 
-.page-changer .c-head__wrap {
-  padding: 0;
-}
-
 /*# sourceMappingURL=style.css.map */
