--- a/assets/scss/_page-changer.scss
+++ b/assets/scss/_page-changer.scss
@@ -16,8 +16,4 @@
       @extend .container-main--1020;
     }
   }
-
-  .c-head__wrap {
-    padding: 0;
-  }
 }
